# minesweeper

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  minesweeper.c  minesweeper.h  types.h
